IF(WIN32)
	# Get the drive letter. This is the dumbest hack ever. cd isn't actually a windows command, thus the batch script.
	EXEC_PROGRAM("${CMAKE_CURRENT_SOURCE_DIR}/cd.bat" "${CMAKE_CURRENT_SOURCE_DIR}" OUTPUT_VARIABLE SV_FILE_PATH)
	STRING(SUBSTRING ${SV_FILE_PATH} 0 2 CMAKE_CURRENT_DRIVE)
ENDIF(WIN32)

ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/SVSOAP.h
	COMMAND wsdl2h
	ARGS
		-s
		-o ${CMAKE_CURRENT_BINARY_DIR}/SVSOAP.h
		-t ${CMAKE_CURRENT_SOURCE_DIR}/typemap.dat
		${CMAKE_CURRENT_SOURCE_DIR}/SV.wsdl
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/SV.wsdl
	DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/typemap.dat
)

ADD_CUSTOM_COMMAND(
	OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/soapH.h
	COMMAND soapcpp2
	ARGS ${CMAKE_CURRENT_BINARY_DIR}/SVSOAP.h
	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/SVSOAP.h
)

ADD_CUSTOM_TARGET(
	soap-targets
	DEPENDS ${CMAKE_CURRENT_BINARY_DIR}/soapH.h
)

SET( SV_SRCS
	stdsoap2.cpp
)

SET( SV_GENERATED_SRCS
	soapC.cpp
	soapClient.cpp
)

SET_SOURCE_FILES_PROPERTIES(
	${SV_GENERATED_SRCS}
	PROPERTIES
	GENERATED TRUE
)

INCLUDE_DIRECTORIES(
	${DPB_BINARY_DIR}/src/soulvision/sh
	${DPB_SOURCE_DIR}/src/soulvision/sh
)

ADD_LIBRARY(stats ${SV_SRCS} ${SV_GENERATED_SRCS})

INSTALL_FILES(/include .h shared.h)
